--- a/run_onchange_after_derive-ssh-pubkeys.sh.tmpl
+++ b/run_onchange_after_derive-ssh-pubkeys.sh.tmpl
@@ -1,4 +1,4 @@
-{{ if ne .chezmoi.os "windows" }}
+{{- if ne .chezmoi.os "windows" -}}
 #!/bin/bash
 
 # Trigger execution when these templates change:
